k8s/helm/sonarqube/ingress-sonar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
spec:
  ingressClassName: nginx  # This is the default ingress class for the NGINX Ingress Controller
  rules:
  - host: yourdomain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarqube-service
            port:
              number: 9000
